# LLM_RAG

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: auth.py  config.py  db.py  email_parse.py  embeddings.py  llm.py  llm.py.bak  main.py  main.py.bak  models.py  rag.py  schemas.py  security.py
backend/docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  EVALUATION_REPORT.md
backend/local_email_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/sample_data/user2_eml/: api_integration.eml  marketing_ping.eml  product_launch.eml
backend/scripts/: benchmark.py  create_users.py  ingest_eml_dir.py  ingest_gmail_imap.py
